feat/adicionando valicoes owasp